--- a/easy_tutorials_clone/test1.css
+++ b/easy_tutorials_clone/test1.css
@@ -3,28 +3,35 @@
     padding: 0;
     font-family: sans-serif;
 }
-.box1{
+
+.box1 {
     background-color: antiquewhite;
 }
-.box2{
-    background-color:aqua;    
+
+.box2 {
+    background-color: aqua;
 }
-.box3{
-    background-color:blue;
+
+.box3 {
+    background-color: blue;
 }
+
 .box4 {
     background-color: deeppink;
 }
+
 .hero div {
     padding: 30px;
 }
-h1{
+
+h1 {
     color: white;
 }
+
 .hero {
     display: grid;
     grid-gap: 10px;
-    /*grid-template-columns: auto auto auto auto;8*/
+    /*grid-template-columns: auto auto auto auto;*/
     grid-auto-flow: column;
 }
 
