--- a/google_chat_clone/body.css
+++ b/google_chat_clone/body.css
@@ -1,80 +1,113 @@
 .body {
     display: grid;
     height: 100vh;
-    border: 1px black solid;
     gap: 3px 5px;
-    grid-template-columns: 50px 180px 20px 4.5fr;
+    grid-template-columns: 20px 180px 20px 4fr 0.3fr;
     grid-template-rows: 0.2fr 3fr 0.2fr 3fr 0.2fr;
-    width: 95%;
+    width: 100%;
 }
+
 .body_chat:nth-child(1) {
+    display: grid;
     grid-column: 1 / 1;
-	grid-row: 1 / 1;
-    border: 1px black solid;
+    grid-row: 1 / 1;
+    justify-content: center;
 }
+
 .body_chat:nth-child(2) {
     grid-column: 2 / 3;
-	grid-row: 1 / 1;
-    border: 1px black solid;
+    grid-row: 1 / 1;
+    text-align: left;
 }
+
 .body_chat:nth-child(3) {
     grid-column: 3 / 4;
-	grid-row: 1 / 1;
-    border: 1px black solid;
+    grid-row: 1 / 1;
 }
+
 .body_chat:nth-child(4) {
+    display: grid;
     grid-column: 1 / 4;
-	grid-row: 2 / 4;
+    grid-row: 2 / 4;
     width: 100%;
     height: 100%;
-    border: 1px black solid;
+    align-items: center;
+    text-align: center;
+    list-style: none;
 }
+
 .body_chat:nth-child(5) {
+    display: grid;
     grid-column: 1 / 1;
-	grid-row: 3 / 4;
+    grid-row: 3 / 4;
     width: 100%;
     height: 100%;
-    border: 1px black solid;
+    justify-content: center;
 }
+
 .body_chat:nth-child(6) {
     grid-column: 2 / 3;
-	grid-row: 3 / 4;
+    grid-row: 3 / 4;
     width: 100%;
     height: 100%;
-    border: 1px black solid;
+
 }
+
 .body_chat:nth-child(7) {
     grid-column: 3 / 4;
-	grid-row: 3 / 4;
+    grid-row: 3 / 4;
     width: 100%;
     height: 100%;
-    border: 1px black solid;
 }
+
 .body_chat:nth-child(8) {
+    display: grid;
     grid-column: 1 / 4;
-	grid-row: 4 / 6;
+    grid-row: 4 / 6;
     width: 100%;
     height: 100%;
-    border: 1px black solid;
+    align-items: center;
+    text-align: center;
+    list-style: none;
 }
+
 .body_chat:nth-child(9) {
     grid-column: 1 / 1;
-	grid-row: 7 / 7;
+    grid-row: 7 / 7;
     width: 100%;
     height: 100%;
-    border: 1px black solid;
 }
+
 .body_chat:nth-child(10) {
     grid-column: 2 / 4;
-	grid-row: 7 / 7;
+    grid-row: 7 / 7;
     width: 100%;
     height: 100%;
+}
+
+.body_chat:nth-child(11) {
+    display: grid;
+    grid-column: 4 / 5;
+    grid-row: 1 / 8;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+}
+
+.body_chat:nth-child(12) {
+    grid-column: 5 / 7;
+    grid-row: 1 / 6;
+    height: 100%;
+    width: 100%;
     border: 1px black solid;
 }
-.body_chat:nth-child(11) {
-    grid-column: 4 / auto;
-	grid-row: 1 / 8;
-    width: 100%;
+
+.body_chat:nth-child(13) {
+    display:grid;
+    grid-column: 5 / 7;
+    grid-row: 7 / 8;
     height: 100%;
-    border: 1px black solid;
+    width: 100%;
+    justify-items: center;
 }
