--- a/google_chat_clone/header.css
+++ b/google_chat_clone/header.css
@@ -5,30 +5,67 @@
     place-items: center;
     grid-template-columns: 50px 200px 3fr 2fr;
     gap: 3px 5px;
-    border: 1px black solid;
     height: 40px;
 }
+
 .header_a {
     display: grid;
     width: 100%;
-    border: 1px black solid;
     height: 100%;
+    place-items: center;
 }
+
 .header_b {
     display: grid;
     width: 100%;
-    border: 1px black solid;    
     height: 100%;
+    place-items: center;
 }
+
 .header_c {
     display: grid;
     width: 100%;
+    height: 100%;
+}
+
+.chatting_bar input {
+    background: transparent;
+    flex: 1;
+    border: 0;
+    padding: 3px 5px;
+}
+
+::placeholder {
+    color: black;
+}
+
+.chatting_bar {
+    width: 100%;
+    max-width: 600px;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    padding: 0px 5px;
+    background: lightgray;
+    opacity: 0.3;
+    margin: 2px;
+}
+
+.header_d {
+    display: flex;
+    width: 100%;
     border: 1px black solid;
     height: 100%;
 }
-.header_d {
-    display: grid;
-    width: 100%;
-    border: 1px black solid;
-    height: 100%;    
+.icons {
+    display: flex;
+    float: left;
+    align-items: center;
+    position: relative;
+    list-style-type: none;
+    margin: 10px 10px 10px 80px;
+}
+.icons li:nth-child(1) {
+    position: relative;
+    height: 100%;
 }
