--- a/google_chat_clone/body.css
+++ b/google_chat_clone/body.css
@@ -96,18 +96,38 @@
 }
 
 .body_chat:nth-child(12) {
+    display: inline-flex;
+    justify-content: center;
+    justify-items: center;
     grid-column: 5 / 7;
     grid-row: 1 / 6;
     height: 100%;
     width: 100%;
-    border: 1px black solid;
+    margin: 0;
+    padding: 0;
+}
+
+.body_chat:nth-child(12) ul {
+    display: -ms-inline-grid;
+    justify-content: center;
+    justify-items: center;
+    padding: 0%;
+    width: 50%;
+    margin: 15px;
+}
+
+.body_chat:nth-child(12) div {
+    display: inline-flex;
+    justify-content: center;
+    list-style: none;
+    width: 40px;
+    height: 40px;
 }
 
 .body_chat:nth-child(13) {
-    display:grid;
+    display: grid;
     grid-column: 5 / 7;
     grid-row: 7 / 8;
     height: 100%;
     width: 100%;
-    justify-items: center;
 }
