220418 dividing sectioin & adding body article

--- a/2022.04.17/0417.css
+++ b/2022.04.17/0417.css
@@ -1,2 +1,10 @@
 @import url("body.css");
 @import url("header.css");
+
+main {
+    display: grid;
+    justify-items: center;
+    height: 1000px;
+    width: auto;
+    margin: 60px 20px;
+}
