--- a/2022.04.17/header.css
+++ b/2022.04.17/header.css
@@ -1,4 +1,4 @@
-.container {
+.header_container {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 3fr 1fr;
@@ -15,24 +15,25 @@ li {
     height: 1fr;
 }
 
-.box:nth-child(1) {
+.header_container_box:nth-child(1) {
     display: flex;
     align-items: center;
     align-content: center;
+    margin-left:
 }
 
-.box:nth-child(2) {
+.header_container_box:nth-child(2) {
     display: grid;
     justify-items: center;
     align-content: center;
 }
 
-.box:nth-child(3) {
+.header_container_box:nth-child(3) {
     display: flex;
     text-align: right;
 }
 
-.logo {
+.header_container_box_logo {
     width: 40px;
     height: 40px;
     border-radius: 50px;
