--- a/2022.04.17/body.css
+++ b/2022.04.17/body.css
@@ -5,6 +5,7 @@
     width: 98%;
     margin: 10px;
 }
+
 .main_containers_box {
     display: grid;
     align-items: center;
@@ -14,16 +15,18 @@
     grid-template-rows: 200px 300px 160px 240px;
     margin: 5px;
 }
-.main_containers_box:nth-child(1){
+
+.main_containers_box:nth-child(1) {
     display: flex;
     align-items: center;
     width: 99%;
     height: 200px;
 }
+
 .main_containers_box:nth-child(1) h3 {
-    border-right: 1px black solid;
-    height: 190px;
+    margin-top: 10px;
 }
+
 .main_containers_box_article {
     display: flex;
     width: 50%;
@@ -31,30 +34,34 @@
     padding: 5px;
     border-top: 1px black solid;
     border-bottom: 1px black solid;
+    border-right: 1px black solid;
 }
+
 .main_containers_box_article p {
     font-size: 40px;
-    font-weight:bold;
+    font-weight: bold;
     width: 83%
 }
+
 .main_containers_box_article span {
     display: inline-flex;
     width: fit-content;
-    font-size: 13px;
+    font-size: 10px;
     align-items: flex-end;
     margin-bottom: 30px;
     color: black;
 }
+
 .fa-arrow-up-right-from-square {
     display: flex;
     margin-bottom: 30px;
-    border: 1px black solid;
     width: 20px;
     height: 20px;
     color: black;
     margin-top: 153px;
 }
-.main_containers_box:nth-child(2){
+
+.main_containers_box:nth-child(2) {
     display: flex;
     align-items: center;
     width: 99%;
@@ -62,19 +69,57 @@
     background-color: azure;
     border: 1px black solid;
 }
-.main_containers_box:nth-child(3){
-    display: flex;
-    align-items: center;
+
+.main_containers_box:nth-child(3) {
+    display: grid;
+    align-items: stretch;
+    justify-content: left;
     width: 99%;
     height: 160px;
-    background-color: azure;
-    border: 1px black solid;
+    padding-left: 0px;
+
 }
-.main_containers_box:nth-child(4){
+
+#small_headline {
+    width: 1150px;
     display: flex;
-    align-items: center;
-    width: 99%;
-    height: 400px;
+    justify-content: left;
+    margin: 0px 0px;
+}
+
+#headline {
+    font-size: 50px;
+    width: 1150px;
+    display: flex;
+    justify-content: left;
+    margin: 1px 0px;
+}
+
+.main_containers_box:nth-child(4) {
+    display: grid;
+    height: 240px;
+    margin: 0;
+    padding: 0;
     background-color: azure;
     border: 1px black solid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.flag {
+    display: grid;
+    align-items: stretch;
+    background-color: red;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 1;
+}
+.thumb_print {
+    display: grid;
+    align-items: stretch;
+    background-color: green;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 1;
 }
