--- a/2022.04.17/header.css
+++ b/2022.04.17/header.css
@@ -38,6 +38,7 @@ li {
     height: 40px;
     border-radius: 50px;
     margin-right: 15px;
+    margin-left: 25px;
     background-color: black;
     color: white;
 }
