copying_website_finish

--- a/2022.04.17/body.css
+++ b/2022.04.17/body.css
@@ -29,7 +29,7 @@
 
 .main_containers_box_article {
     display: flex;
-    width: 50%;
+    width: 30% 70%;
     height: 100%;
     padding: 5px;
     border-top: 1px black solid;
@@ -37,8 +37,13 @@
     border-right: 1px black solid;
 }
 
+.main_containers_box_article h4 {
+    margin-top: 30px;
+    width: 70%
+}
 .main_containers_box_article p {
     font-size: 40px;
+    margin-top: 30px;
     font-weight: bold;
     width: 83%
 }
@@ -100,26 +105,36 @@
     height: 240px;
     margin: 0;
     padding: 0;
-    background-color: azure;
-    border: 1px black solid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
 .flag {
     display: grid;
-    align-items: stretch;
-    background-color: red;
     margin: 0;
     padding: 0;
     height: 100%;
     width: 1;
+    gap: 6px;
 }
 .thumb_print {
     display: grid;
     align-items: stretch;
-    background-color: green;
     margin: 0;
     padding: 0;
     height: 100%;
     width: 1;
+    gap: 6px;
+}
+.hand_waving {
+    display: grid;
+    align-items: stretch;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 1;
+    gap: 6px;
+}
+.fa-solid fa-arrow-trend-up {
+    display: flex;
+    flex: left;
 }
